Resize and align correctly text in guide card

--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@
 
 .hero-text > h1 {
     display: inline;
-    font-size: 36px;
+    font-size: 50px;
 }
 
 .hero-text > h3 {
@@ -28,20 +28,11 @@
     margin-top: 10px;
 }
 
-
-.round-image {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    
-}
-
-#guide-img {
-    width: 180px;
-}
-
-.to-do {
-    background: #e2e6fb;
+.to-do-section {
+    background-color: #f0f2f8;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .to-do-title {
@@ -58,8 +49,15 @@
     text-align: center;
 }
 
+.round-image {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    
+}
+
 .to-do-item {
-    width: 300px;
+    width: 198px;
     font-size: 16px;
 }
 
@@ -74,16 +72,10 @@
     font-size: inherit;
 }
 
-.to-do-section {
-    background-color: #f0f2f8;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
 
 .guide-card {
     background: #F4D35E;
-    width: 400px;
+    width: 415px;
     margin: 20px auto;
     display: flex;
     margin: 50px auto 30px;
@@ -92,9 +84,30 @@
 .guide-text {
     display: flex;
     flex-direction: column;
+    margin: auto 20px ;
+    text-align: center;
+    width: 180px;
 }
 
-.guide-image {
+#guide-img {
     width: 180px;
-    height: 245px;
+    margin: 23px 13px;
+}
+
+.guide-text > h3 {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.guide-text > h4 {
+    font-size: 16px;
+    font-weight: 500;
+    font-style: italic;
+    margin-top: 12px;
+}
+
+.guide-text > h5 {
+    font-size: 16px;
+    font-style: bold;
+    margin-top: 26px;
 }
